generate random-named omc_home directory
.. so that multiple instances doesn't interfere with their
corresponding log file :).